<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    
    <item
        android:id="@+id/menu_search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always"
        tools:icon="@drawable/ic_search"
        tools:ignore="AlwaysShowAction" />
    
    <group android:id="@+id/menu_group">
        <item
            android:id="@+id/menu_night_mode"
            android:title="@string/dark_mode"
            app:showAsAction="never" />
    </group>
    
    <group android:id="@+id/about_group">
        <item
            android:id="@+id/menu_about"
            android:title="@string/about"
            app:showAsAction="never" />
    </group>
</menu>