<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.MovieDetailFragment">
    
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">
        
        <include
            android:id="@+id/toolbar_movie_detail"
            layout="@layout/toolbar_movie_detail" />
    </com.google.android.material.appbar.AppBarLayout>
    
    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scroll_view_detail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarStyle="outsideOverlay"
        android:scrollbars="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        
        <LinearLayout
            style="@style/DetailPageBackground"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            
            <androidx.constraintlayout.widget.ConstraintLayout
                style="@style/DetailConstraintLayoutStyle"
                android:padding="8dp">
                
                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/img_poster"
                    android:layout_width="120dp"
                    android:layout_height="180dp"
                    android:contentDescription="@string/movie_poster"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:shapeAppearanceOverlay="@style/RoundedCornersImageView"
                    tools:src="@drawable/poster_placeholder" />
                
                <TextView
                    android:id="@+id/tv_genre"
                    style="@style/ListTextView.Detail.Specification.Colored"
                    android:layout_marginTop="0dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@id/img_poster"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Drama, Crime" />
                
                <TextView
                    android:id="@+id/tv_tagline"
                    style="@style/ListTextView.Detail.Tagline"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/img_poster"
                    app:layout_constraintTop_toBottomOf="@id/tv_genre"
                    tools:text="Fear can hold you prisoner. Hope can set you free." />
                
                <TextView
                    android:id="@+id/tv_overview_title"
                    style="@style/ListTextView.Detail.DetailPage.Title"
                    android:layout_marginTop="8dp"
                    android:text="@string/overview"
                    app:layout_constraintStart_toEndOf="@id/img_poster"
                    app:layout_constraintTop_toBottomOf="@id/tv_tagline" />
                
                <TextView
                    android:id="@+id/tv_overview"
                    style="@style/ListTextView.Detail.DetailPage"
                    android:layout_width="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/img_poster"
                    app:layout_constraintTop_toBottomOf="@id/tv_overview_title"
                    app:layout_constraintVertical_bias="0.0"
                    tools:text="@string/overview_placeholder" />
            </androidx.constraintlayout.widget.ConstraintLayout>
            
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_crew"
                style="@style/DetailRecyclerView"
                tools:listitem="@layout/list_detail_row" />
            
            <TextView
                android:id="@+id/tv_cast_title"
                style="@style/ListTextView.Detail.DetailPage.Title"
                android:text="@string/top_billed_cast" />
            
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_cast"
                style="@style/GridCastRecyclerViewBackground"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:orientation="vertical"
                android:paddingHorizontal="6dp"
                android:paddingBottom="4dp"
                android:scrollbarStyle="outsideOverlay"
                android:scrollbars="horizontal" />
            
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_other"
                style="@style/DetailRecyclerView"
                tools:listitem="@layout/list_detail_row" />
            
            <TextView
                android:id="@+id/tv_posters"
                style="@style/ListTextView.Detail.DetailPage.Title"
                android:layout_marginBottom="4dp"
                android:text="@string/posters" />
            
            <include layout="@layout/recyclerview_grid_poster" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>